--- a/privacy.html
+++ b/privacy.html
@@ -1,63 +1,117 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - IFRS Coach</title>
-    <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            border-bottom: 2px solid #eee;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            margin-top: 30px;
+            color: #2c3e50;
+            font-size: 1.25rem;
+        }
+        h3 {
+            margin-top: 20px;
+            font-size: 1.1rem;
+            color: #444;
+        }
+        p, ul {
+            margin-bottom: 16px;
+        }
+        strong {
+            color: #000;
+        }
+        a {
+            color: #0366d6;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .date {
+            color: #666;
+            font-style: italic;
+            margin-bottom: 30px;
+        }
+        .footer {
+            margin-top: 50px;
+            padding-top: 20px;
+            border-top: 1px solid #eee;
+            font-size: 0.9rem;
+            color: #666;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h2>Privacy Policy</h2> 
-    <p>
-        I built the IFRS Coach app as a Free app. This SERVICE is provided by me at no cost and is intended for use as is.
-    </p> 
-    <p>
-        This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
-    </p> 
-    <p>
-        If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
-    </p> 
 
-    <strong>Information Collection and Use</strong> 
-    <p>
-        For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
-    </p> 
-    <p>
-        The app does use third-party services that may collect information used to identify you.
-    </p> 
-    <div>
-        <p>Link to privacy policy of third-party service providers used by the app:</p> 
-        <ul>
-            <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
-            <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a></li>
-            <li><a href="https://firebase.google.com/policies/analytics" target="_blank">Google Analytics for Firebase</a></li>
-            <li><a href="https://firebase.google.com/support/privacy/" target="_blank">Firebase Crashlytics</a></li>
-        </ul>
-    </div> 
+    <h1>Privacy Policy</h1>
+    <p class="date">Effective Date: January 1, 2026</p>
 
-    <strong>Log Data</strong> 
-    <p>
-        I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
-    </p> 
+    <h2>1. Introduction</h2>
+    <p>Welcome to IFRS Coach. This application is developed and maintained by <strong>Mustafa Sharara</strong>. We value your privacy and are committed to protecting your personal data. This policy explains what information we collect, how we use it, and your rights regarding your data.</p>
 
-    <strong>Security</strong> 
-    <p>
-        I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
-    </p> 
+    <h2>2. Data We Collect</h2>
+    <p>We strive to collect the minimum amount of data necessary to operate this app.</p>
 
-    <strong>Children’s Privacy</strong> 
-    <p>
-        These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions.
-    </p> 
+    <h3>a. Personal Information</h3>
+    <p>We do <strong>NOT</strong> collect personally identifiable information (PII) such as your name, email address, or phone number directly within the app. All user-generated content (such as notes, bookmarks, and quiz progress) is stored locally on your device.</p>
 
-    <strong>Changes to This Privacy Policy</strong> 
-    <p>
-        I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.
-    </p> 
+    <h3>b. Log Data & Usage</h3>
+    <p>In a case of an error in the app, we collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</p>
 
-    <strong>Contact Us</strong> 
-    <p>
-        If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at support@ifrsapp.zohodesk.eu.
-    </p>
+    <h3>c. Third-Party Services</h3>
+    <p>The app uses third-party services that may collect information used to identify you. Link to privacy policy of third-party service providers used by the app:</p>
+    <ul>
+        <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
+        <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a></li>
+        <li><a href="https://firebase.google.com/policies/analytics" target="_blank">Google Analytics for Firebase</a></li>
+        <li><a href="https://firebase.google.com/support/privacy/" target="_blank">Firebase Crashlytics</a></li>
+    </ul>
+
+    <h2>3. How We Use Your Data</h2>
+    <p>The anonymous data we collect is used solely for:</p>
+    <ul>
+        <li>Improving app stability and performance (Crashlytics).</li>
+        <li>Understanding user engagement to develop new features (Analytics).</li>
+        <li>Serving relevant advertisements to support the free version of the app (AdMob).</li>
+    </ul>
+
+    <h2>4. Data Storage and Security</h2>
+    <p><strong>Local Data:</strong> Your personal progress, notes, and bookmarks are stored securely on your device. If you uninstall the app, this data may be lost unless you have backed up your device.</p>
+    <p><strong>Security:</strong> We value your trust in providing us your information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable.</p>
+
+    <h2>5. Children’s Privacy</h2>
+    <p>These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do the necessary actions.</p>
+
+    <h2>6. Your Rights</h2>
+    <ul>
+        <li><strong>Opt-Out:</strong> You can opt-out of personalized ads and analytics tracking via the "Data & Privacy Settings" menu.</li>
+        <li><strong>Deletion:</strong> Since we do not store your personal data on our servers, we cannot provide a copy or delete it. You can delete your local data by uninstalling the app.</li>
+    </ul>
+
+    <h2>7. Changes to This Policy</h2>
+    <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+
+    <h2>8. Contact Us</h2>
+    <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at: <a href="mailto:khepri.apps.team@gmail.com">khepri.apps.team@gmail.com</a></p>
+
+    <div class="footer">
+        &copy; 2026 Mustafa Sharara. All rights reserved.
+    </div>
+
 </body>
 </html>
