--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - IFRS Coach</title>
+    <title>Data Deletion Request - IFRS Coach</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -28,7 +28,7 @@
             font-size: 1.1rem;
             color: #444;
         }
-        p, ul {
+        p, ul, ol {
             margin-bottom: 16px;
         }
         strong {
@@ -54,70 +54,68 @@
             color: #666;
             text-align: center;
         }
+        /* Button style for the main action */
+        .btn-delete {
+            display: inline-block;
+            background-color: #d9534f;
+            color: white !important;
+            padding: 12px 24px;
+            border-radius: 6px;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+        .btn-delete:hover {
+            background-color: #c9302c;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
 
-    <h1>Privacy Policy</h1>
+    <h1>Data Deletion Request</h1>
     <p class="date">Effective Date: January 19, 2026</p>
 
     <h2>1. Introduction</h2>
-    <p>Welcome to IFRS Coach. This application is developed and maintained by <strong>Mustafa Sharara</strong>. We value your privacy and are committed to protecting your personal data. This policy explains what information we collect, how we use it, and your rights regarding your data.</p>
+    <p>At <strong>IFRS Coach</strong>, we respect your right to control your data. In accordance with Google Play's Data Safety policies and our Privacy Policy, you may request the complete deletion of your account and associated data at any time.</p>
 
-    <h2>2. Data We Collect</h2>
-    <p>We collect specific data to provide account synchronization, progress tracking, and premium features.</p>
-
-    <h3>a. Account Information</h3>
-    <p>If you choose to create an account, we collect your <strong>email address</strong> and <strong>name</strong> via Firebase Authentication (email/password, Google Sign-In, or Apple Sign-In). This allows you to log in across multiple devices and recover your account.</p>
-
-    <h3>b. User-Generated Content</h3>
-    <p>We store your learning progress, bookmarks, notes, and profile preferences (such as avatar choice and preferred language) securely on our cloud servers (Google Firestore) so that your data remains synced across your devices.</p>
-
-    <h3>c. Log Data & Usage</h3>
-    <p>In a case of an error in the app, we collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</p>
-
-    <h3>d. Third-Party Services</h3>
-    <p>The app uses third-party services that may collect information used to identify you. Link to privacy policy of third-party service providers used by the app:</p>
+    <h2>2. Data That Will Be Deleted</h2>
+    <p>When your deletion request is processed, the following data will be permanently removed from our servers (Google Firestore & Firebase Auth):</p>
     <ul>
-        <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
-        <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a></li>
-        <li><a href="https://firebase.google.com/policies/analytics" target="_blank">Google Analytics for Firebase</a></li>
-        <li><a href="https://firebase.google.com/support/privacy/" target="_blank">Firebase Crashlytics</a></li>
+        <li><strong>Account Credentials:</strong> Your registered email and encrypted password.</li>
+        <li><strong>User Profile:</strong> Your name, avatar, and language preferences.</li>
+        <li><strong>Learning Progress:</strong> All course progress, bookmarks, and quiz scores.</li>
+        <li><strong>Personal Notes:</strong> Any notes you have saved within the application.</li>
     </ul>
+    <p><em>Note: This action is irreversible. Once deleted, your data cannot be recovered.</em></p>
 
-    <h2>3. How We Use Your Data</h2>
-    <p>The data we collect is used solely for:</p>
-    <ul>
-        <li><strong>Account Sync:</strong> Allowing you to access your notes and progress on any device.</li>
-        <li><strong>App Stability:</strong> Improving performance and fixing crashes (Crashlytics).</li>
-        <li><strong>Feature Development:</strong> Understanding user engagement to build better tools (Analytics).</li>
-        <li><strong>Ad Support:</strong> Serving relevant advertisements to support the free version of the app (AdMob).</li>
-    </ul>
+    <h2>3. How to Request Deletion</h2>
 
-    <h2>4. Data Storage and Security</h2>
-    <p><strong>Cloud Storage:</strong> Your account data and progress are stored securely using Google Cloud Firestore, which employs industry-standard encryption in transit and at rest.</p>
-    <p><strong>Security:</strong> We value your trust in providing us your information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable.</p>
+    <h3>Option A: In-App Deletion (Instant)</h3>
+    <p>If you still have the app installed and can log in:</p>
+    <ol>
+        <li>Open the <strong>IFRS Coach</strong> app.</li>
+        <li>Go to <strong>Profile / Settings</strong>.</li>
+        <li>Scroll down and tap <strong>Delete Account</strong>.</li>
+        <li>Confirm your choice. Your data will be deleted immediately.</li>
+    </ol>
 
-    <h2>5. Children’s Privacy</h2>
-    <p>These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do the necessary actions.</p>
-
-    <h2>6. Your Rights & Account Deletion</h2>
-    <p>You have full control over your data. You may request the deletion of your account and associated data at any time. Upon deletion, your account, email, notes, and progress will be permanently removed from our servers.</p>
+    <h3>Option B: Web Request (If you cannot access the app)</h3>
+    <p>If you have uninstalled the app or cannot log in, you may request deletion manually. We will process your request within 30 days.</p>
     
-    <ul>
-        <li><strong>Immediate In-App Deletion:</strong> You can delete your account instantly by navigating to <strong>Profile > Delete Account</strong> within the app.</li>
-        <li><strong>Deletion Request by Email:</strong> If you cannot access the app, you may request data deletion by emailing us at <a href="mailto:support@ifrsapp.zohodesk.eu">support@ifrsapp.zohodesk.eu</a> with the subject line "Delete Account". We will process your request within 30 days.</li>
-        <li><strong>Opt-Out:</strong> You can opt-out of personalized ads and analytics tracking via the "Data & Privacy Settings" menu inside the app.</li>
-    </ul>
+    <p>Click the button below to generate a deletion request email:</p>
 
-    <h2>7. Changes to This Policy</h2>
-    <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+    <a href="mailto:support@ifrsapp.zohodesk.eu?subject=Account Deletion Request&body=I request the deletion of my IFRS Coach account and all associated data.%0D%0A%0D%0AMy Registered Email: [Please insert your email here]" class="btn-delete">
+        Request Account Deletion via Email
+    </a>
 
-    <h2>8. Contact Us</h2>
-    <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at: <a href="mailto:support@ifrsapp.zohodesk.eu">support@ifrsapp.zohodesk.eu</a></p>
+    <p style="margin-top: 20px; font-size: 0.9rem; color: #666;">
+        Alternatively, you can email us directly at <a href="mailto:support@ifrsapp.zohodesk.eu">support@ifrsapp.zohodesk.eu</a> with the subject line <strong>"Delete Account"</strong>. Please include the email address used to register the account.
+    </p>
 
     <div class="footer">
-        &copy; 2026 Mustafa Sharara. All rights reserved.
+        &copy; 2026 Mustafa Sharara. All rights reserved.<br>
+        <a href="https://khnumx1z2.github.io/.github.io/privacy.html">Privacy Policy</a> | 
+        <a href="https://khnumx1z2.github.io/.github.io/terms.html">Terms of Service</a>
     </div>
 
 </body>
